fixed alignment for jobs

--- a/admin-panel/assets/css/bs-overrides.css
+++ b/admin-panel/assets/css/bs-overrides.css
@@ -17,6 +17,10 @@ body {
   font-weight: 600;
 }
 
+.btn-sm {
+  font-size: 0.75rem;
+}
+
 .btn-long {
   padding: 0.6rem 4rem;
 }
